--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "d3-dsv": "^1.0.7",
     "express": "^4.16.2",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "pg": "^7.4.0",
+    "sequelize": "^4.22.6"
   }
 }
